--- a/index.html
+++ b/index.html
@@ -823,6 +823,188 @@ nav a:hover::after{
     max-width:100%;
   }
 }
+.hero-buttons {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.hero-buttons .btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 22px;
+  border-radius: 30px;
+  font-size: 15px;
+  font-weight: 600;
+  white-space: nowrap;   /* 🔥 THIS STOPS THE BREAKING */
+  min-width: 140px;      /* 🔥 FIXES MOBILE */
+  height: 46px;          /* 🔥 CONSISTENT HEIGHT */
+  text-align: center;
+}
+
+/* Green filled button */
+.btn-primary {
+  background: #1ec96b;
+  color: #fff;
+  border: none;
+}
+
+/* Green outline button */
+.btn-outline {
+  background: transparent;
+  color: #1ec96b;
+  border: 2px solid #1ec96b;
+}
+
+/* MOBILE FIX */
+@media (max-width: 768px) {
+  .hero-buttons {
+    justify-content: center;
+  }
+}
+.featured-sunpod {
+  width: 100%;
+  padding: 80px 20px;
+  background: linear-gradient(135deg, #0ea5e9, #22c55e);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.featured-wrapper {
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  align-items: center;
+}
+
+.featured-content {
+  flex: 1;
+  min-width: 300px;
+  animation: fadeInLeft 1s ease forwards;
+}
+
+.featured-title {
+  font-size: 2.8rem;
+  margin-bottom: 20px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+}
+
+.featured-subtext {
+  font-size: 1.2rem;
+  margin-bottom: 25px;
+  line-height: 1.6;
+}
+
+.featured-badges {
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+.badge {
+  background: rgba(0,0,0,0.2);
+  padding: 10px 18px;
+  border-radius: 25px;
+  font-weight: 600;
+  font-size: 0.95rem;
+  animation: bounce 1.2s infinite alternate;
+}
+
+.featured-btn {
+  display: inline-block;
+  padding: 14px 28px;
+  background: #facc15;
+  color: #020617;
+  font-weight: 700;
+  border-radius: 30px;
+  text-decoration: none;
+  font-size: 1.1rem;
+  transition: all 0.3s ease;
+}
+
+.featured-btn:hover {
+  transform: scale(1.05);
+  background: #eab308;
+}
+
+.featured-carousel {
+  flex: 1;
+  min-width: 300px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+  animation: fadeInRight 1s ease forwards;
+}
+
+.carousel-slide {
+  width: 100%;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 1s ease;
+}
+
+.carousel-slide.active {
+  opacity: 1;
+}
+
+.carousel-slide img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+/* Animations */
+@keyframes fadeInLeft {
+  0% {opacity:0; transform: translateX(-50px);}
+  100% {opacity:1; transform: translateX(0);}
+}
+
+@keyframes fadeInRight {
+  0% {opacity:0; transform: translateX(50px);}
+  100% {opacity:1; transform: translateX(0);}
+}
+
+@keyframes bounce {
+  0% {transform: translateY(0);}
+  100% {transform: translateY(-6px);}
+}
+
+/* RESPONSIVE */
+@media(max-width:900px){
+  .featured-wrapper {flex-direction: column; text-align:center;}
+  .featured-badges {justify-content:center;}
+  .featured-content {animation:none;}
+  .featured-carousel {animation:none; margin-top:30px;}
+}
+  .featured-carousel-wrapper {
+    height:350px;
+  }
+  .carousel-slide {
+    opacity:0;
+    position:absolute;
+    inset:0;
+    transition:opacity 1s ease;
+  }
+  .carousel-slide.active {
+    opacity:1;
+    z-index:1;
+  }
+  .carousel-dots span.active {
+    background:#22c55e !important;
+    opacity:1 !important;
+  }
 </style>
 </head>
 
@@ -865,10 +1047,10 @@ nav a:hover::after{
     <div class="slide-content">
       <h1>Reliable, Affordable Solar Power Solutions</h1>
       <p>Clean energy solutions designed for homes and businesses. Power that works for you — every day.</p>
-      <div class="hero-buttons">
-        <a href="#contact" class="primary-btn">Get a Quote</a>
-        <a href="#service" class="secondary-btn">View Services</a>
-      </div>
+ <div class="hero-buttons">
+  <a href="#contact" class="btn btn-primary">Get a Quote</a>
+  <a href="#service" class="btn btn-outline">View Services</a>
+</div>
     </div>
   </div>
 
@@ -878,9 +1060,9 @@ nav a:hover::after{
       <h1>Smart Energy Systems Built for the Future</h1>
       <p>Sustainable power solutions engineered with modern technology to reduce cost and increase efficiency.</p>
       <div class="hero-buttons">
-        <a href="#projects" class="primary-btn">Our Projects</a>
-        <a href="#contact" class="secondary-btn">Contact Us</a>
-      </div>
+  <a href="#projects" class="btn btn-primary">Our Projects</a>
+  <a href="#contact" class="btn btn-outline">Contact Us</a>
+</div>
     </div>
   </div>
 </section>
@@ -964,45 +1146,99 @@ nav a:hover::after{
     </div>
   </div>
 </section>
+<!-- ===== FEATURED PRODUCT : SUNPOD (ERROR-PROOF) ===== -->
+<section style="padding:90px 20px; background:#f8fafc;">
 
-<!-- ================= PRODUCTS ================= -->
-<section class="products-section" id="products">
-  <div class="products-wrapper">
-    <h2 id="featuredTitle" style="text-align:center; font-weight:800; font-size:2.5rem; color:#020617; transition:color 0.6s ease;">Featured Products</h2>
-    <script>
-      const colors = ["#22c55e", "#16a34a", "#0ea5e9", "#020617"];
-      let index = 0;
-      setInterval(() => {
-        document.getElementById("featuredTitle").style.color = colors[index];
-        index = (index + 1) % colors.length;
-      }, 1200);
-    </script>
-    <br>
+  <div style="max-width:1100px; margin:auto; text-align:center;">
 
-    <h2 style="text-align:center">WHAT WE SELL</h2>
-    <br>
-    
+    <h2 style="font-size:2.6rem; font-weight:800; color:#020617;">
+      Featured Product
+    </h2>
 
-    <div class="products-grid">
-      <div class="product-card">
-     
-        <h3 style="text-align:center;">SUNPOD Solar Power Station:</h3>
-        <p style="font-size:2rem">A compact and affordable solar power solution designed for rural and urban communities. It is portable, easy to install, and delivers consistent energy for homes and small businesses.</p>
-        <br>
-        <a href="tel:+2347080339869" class="order-btn" style="font-size:1rem">Make an Order</a>
-      </div>
+    <p style="
+      max-width:900px;
+      margin:15px auto 40px;
+      font-size:1.1rem;
+      color:#475569;
+      line-height:1.7;
+    ">
+      <b style="color:#22c55e;">SUNPOD Solar Power Station</b> is proudly
+      <b>built 100% locally</b> using repurposed e-waste and durable materials.
+      Designed for affordability, portability, and sustainable power across Nigeria.
+      You don't have to worry about Electricity outbreak because <em>SUNPOD</em> Got You Covered.
+    </p>
 
-      <div class="product-card">
-          <br>
-  
-        <h3 style="text-align:center;">Solar Panels and Batteries:</h3>
-        <br>
-        <p style="font-size:2rem"> High-quality solar panels and long-lasting batteries that ensure optimal energy production and storage.</p>
-        <br>
-        <a href="tel:+2347080339869" class="order-btn" style="font-size:1rem">Make an Order</a>
+    <!-- SLIDER CONTAINER -->
+    <div id="sunpod-slider"
+      style="
+        position:relative;
+        max-width:600px;
+        height:360px;
+        margin:0 auto;
+        overflow:hidden;
+        border-radius:20px;
+        box-shadow:0 20px 45px rgba(0,0,0,0.25);
+        background:#000;
+      ">
+
+      <img src="Use1.jpg" style="
+        width:100%;
+        height:100%;
+        object-fit:cover;
+        position:absolute;
+        inset:0;
+        opacity:1;
+        transition:opacity 1s ease;
+      ">
+
+      <img src="Use2.jpg" style="
+        width:100%;
+        height:100%;
+        object-fit:cover;
+        position:absolute;
+        inset:0;
+        opacity:0;
+        transition:opacity 1s ease;
+      ">
+
+      <img src="Use3.jpg" style="
+        width:100%;
+        height:100%;
+        object-fit:cover;
+        position:absolute;
+        inset:0;
+        opacity:0;
+        transition:opacity 1s ease;
+      ">
+
+      <!-- DOTS -->
+      <div id="sunpod-dots"
+        style="
+          position:absolute;
+          bottom:14px;
+          left:50%;
+          transform:translateX(-50%);
+          display:flex;
+          gap:10px;
+        ">
       </div>
 
     </div>
+
+    <a href="tel:+2347080339869"
+      style="
+        display:inline-block;
+        margin-top:25px;
+        padding:14px 30px;
+        background:#22c55e;
+        color:#052e16;
+        font-weight:700;
+        border-radius:30px;
+        text-decoration:none;
+      ">
+      Make an Order →
+    </a>
+
   </div>
 </section>
 
@@ -1113,7 +1349,7 @@ nav a:hover::after{
             <svg width="20" height="20" fill="currentColor" style="margin-right:8px;">
               <path d="M2 2h16v16H2z" fill="none"/><path d="M4 4h12v12H4z"/>
             </svg>
-            info@magnificenttechhub.com.ng
+            info@magnificenttechnologyhub.com.ng
           </div>
 
           <div>
@@ -1155,7 +1391,7 @@ nav a:hover::after{
     <div class="footer-contact">
       <h3>Contact Us</h3>
       <p>Phone: +234 708 033 9869</p>
-      <p>Email: info@magnificenttechhub.com.ng</p>
+      <p>Email: info@magnificenttechnologyhub.com.ng</p>
       <p>Address: Nigeria</p>
 
       <!-- Optional Social Icons -->
@@ -1238,7 +1474,51 @@ function showServices(){
 }
 window.addEventListener('scroll', showServices);
 window.addEventListener('load', showServices);
-</script>
+// Animate SUNPOD Images on Scroll
+document.addEventListener("DOMContentLoaded", function(){
 
+  const slider = document.getElementById("sunpod-slider");
+  if(!slider) return;
+
+  const images = slider.getElementsByTagName("img");
+  const dotsBox = document.getElementById("sunpod-dots");
+
+  let current = 0;
+
+  // Create dots safely
+  for(let i = 0; i < images.length; i++){
+    const dot = document.createElement("span");
+    dot.style.width = "12px";
+    dot.style.height = "12px";
+    dot.style.borderRadius = "50%";
+    dot.style.background = i === 0 ? "#22c55e" : "#ffffff";
+    dot.style.opacity = i === 0 ? "1" : "0.5";
+    dot.style.cursor = "pointer";
+
+    dot.onclick = function(){
+      showSlide(i);
+    };
+
+    dotsBox.appendChild(dot);
+  }
+
+  const dots = dotsBox.children;
+
+  function showSlide(index){
+    for(let i = 0; i < images.length; i++){
+      images[i].style.opacity = i === index ? "1" : "0";
+      dots[i].style.background = i === index ? "#22c55e" : "#ffffff";
+      dots[i].style.opacity = i === index ? "1" : "0.5";
+    }
+    current = index;
+  }
+
+  setInterval(function(){
+    let next = (current + 1) % images.length;
+    showSlide(next);
+  }, 3500);
+
+});
+</script>
 </body>
 </html>
