Update contact email in footer section

--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@ nav a:hover::after{
     <div class="footer-contact">
       <h3>Contact Us</h3>
       <p>Phone: +234 708 033 9869</p>
-      <p>Email: info@magnificenttechnologyhub.com.ng</p>
+      <p>Email: magnificenttechnologyhub@gmail.com</p>
       <p>Address: Nigeria</p>
 
       <!-- Optional Social Icons -->
