Change contact email to magnificenttechnologyhub@gmail.com
Updated the contact email in the footer.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Magnificent Technology Hub</title>
 
 <style>
@@ -1349,7 +1349,7 @@ nav a:hover::after{
             <svg width="20" height="20" fill="currentColor" style="margin-right:8px;">
               <path d="M2 2h16v16H2z" fill="none"/><path d="M4 4h12v12H4z"/>
             </svg>
-            info@magnificenttechnologyhub.com.ng
+            magnificenttechnologyhub@gmail.com
           </div>
 
           <div>
